--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-env": "^7.27.2",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "handlebars": "^4.7.8",
+    "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.3",
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
@@ -30,5 +32,8 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "lodash.throttle": "^4.1.1"
   }
 }
